--- a/.ftpconfig
+++ b/.ftpconfig
@@ -1,8 +1,8 @@
 {
     "protocol": "sftp",
-    "host": "34.228.223.255",
+    "host": "3.92.213.122",
     "port": 22,
     "user": "ubuntu",
     "privatekey": "/home/tyler/.ssh/id_rsa",
-    "remote":"/data2/Code/zebrafish_passivity"
+    "remote":"~/code/babelfish"
 }
