--- a/Dockerfile-bootstrap
+++ b/Dockerfile-bootstrap
@@ -16,8 +16,8 @@ RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-4.5.11-Linux-x86
     ln -s /opt/conda/etc/profile.d/conda.sh /etc/profile.d/conda.sh && \
     echo ". /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc
 
-COPY strict_environment /tmp/
-RUN conda create --name babel --file /tmp/strict_environment
+COPY environment.yml /tmp/
+RUN conda env update -n babel -f  /tmp/environment.yml
 RUN echo ". activate babel" > ~/.bashrc
 ENV PATH /opt/conda/envs/env/bin:$PATH
 WORKDIR /Notebooks
