--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
 
     // "nixEnvSelector.nixShellConfig": "~/code/babelfish/default.nix",
     // "nixEnvSelector.nixShellConfig": "${workspaceRoot}/conda.nix",
-    "nixEnvSelector.nixShellConfig": "${workspaceRoot}/default.nix",
+    "nixEnvSelector.nixShellConfig": "${workspaceRoot}/shell.nix",
     "files.associations": {
         "main": "python",
         "btf_2_hdf5_small": "python",
@@ -49,7 +49,7 @@
         "[!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.]": "python",
         "[!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.]": "python"
     },
-    "python.pythonPath": "/home/tyler/.nix-profile/bin/python",
+    "python.pythonPath": "/nix/store/5dbidajmgrvskv7kj6bwrkza8szxkgar-python3-3.7.5/bin/python",
     "python.linting.pylintEnabled": true,
     "python.linting.mypyEnabled": false,
     "python.linting.enabled": true
