--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,8 +49,9 @@
         "[!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.]": "python",
         "[!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.]": "python"
     },
-    "python.pythonPath": "/nix/store/m345fvi8jr3p974pff18pzb6c8c7x4vy-python3-3.7.5-env/bin/python3.7",
+    "python.pythonPath": "/home/tyler/opt/anaconda3/envs/bf/bin/python",
     "python.linting.pylintEnabled": true,
     "python.linting.mypyEnabled": false,
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "jupyter.jupyterServerType": "remote"
 }
