change python to conda

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,7 @@
         "[!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.]": "python",
         "[!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.][!.]": "python"
     },
-    "python.pythonPath": "/nix/store/m345fvi8jr3p974pff18pzb6c8c7x4vy-python3-3.7.5-env/bin/python3.7",
+    "python.pythonPath": "/home/tyler/lib/anaconda3/bin/python",
     "python.linting.pylintEnabled": true,
     "python.linting.mypyEnabled": false,
     "python.linting.enabled": true
